--- a/web-app/src/app/components/no-tdt-form.component.html
+++ b/web-app/src/app/components/no-tdt-form.component.html
@@ -52,10 +52,11 @@
             <mat-form-field appearance="outline">
               <mat-label>Classification</mat-label>
               <mat-select formControlName="classification" class="form-select">
-                  <mat-option *ngFor="let item of classifications"
-                          [value]="item">
+                  <mat-optgroup *ngFor="let group of classifications.groups" [label]="group.label" disabled="false">
+                    <mat-option *ngFor="let item of group.values" [value]="item">
                     {{item}}
                   </mat-option>
+                </mat-optgroup>
             </mat-select>
             </mat-form-field>
             <mat-form-field appearance="outline">
