--- a/web-app/src/app/components/pastell-snack.component.css
+++ b/web-app/src/app/components/pastell-snack.component.css
@@ -1,5 +1,7 @@
 a {
     color: hotpink;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 button:hover{
     background-color: rgba(255, 255, 255, 0.08);
