--- a/web-app/src/app/components/navbar.component.html
+++ b/web-app/src/app/components/navbar.component.html
@@ -32,7 +32,7 @@
         <mat-divider></mat-divider>
         <button mat-menu-item  (click)="logout($event)">
           <mat-icon>logout</mat-icon>
-          <span>Déconnection</span>
+          <span>Déconnexion</span>
         </button>
       </mat-menu>
   </mat-toolbar>
