[CSS] Suppresion des class de angular flex layout deprecated

--- a/web-app/src/app/components/dashboard.component.css
+++ b/web-app/src/app/components/dashboard.component.css
@@ -4,3 +4,15 @@
     padding-right: 16px;
 }
 
+.cards {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+
+}
+
+.card-item {
+    width: 30%;
+    padding: 10px;
+    justify-content: center;
+}
