--- a/web-app/src/app/components/dashboard.component.html
+++ b/web-app/src/app/components/dashboard.component.html
@@ -1,7 +1,6 @@
 <div class="content">
-    <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="16px grid">
-      <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%" *ngFor="let card of items">
-        <mat-card class="mat-elevation-z4">
+    <div class="cards" >
+        <mat-card class="card-item" *ngFor="let card of items"> 
           <mat-card-header>
             <mat-card-title>{{card.title}}</mat-card-title>
           </mat-card-header>
@@ -12,6 +11,5 @@
             <button mat-raised-button color="primary" [routerLink]="card.link">{{card.button}}</button>
           </mat-card-actions>
         </mat-card>
-      </div>
     </div>
     </div>
