correction des configurations et ajout de linter

--- a/web-app/src/app/components/dialog-infos.html
+++ b/web-app/src/app/components/dialog-infos.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>{{data.title}}</h1>
 <mat-divider></mat-divider>
-<div mat-dialog-content *ngIf="data.dialogId == 'infos'">
+<div mat-dialog-content *ngIf="data.dialogId === 'infos'">
   <mat-list>
     <mat-list-item>
       <mat-icon mat-list-icon>alternate_email</mat-icon>
@@ -24,7 +24,7 @@
     </mat-list-item>
   </mat-list>
 </div>
-<div mat-dialog-content *ngIf="data.dialogId == 'user'">
+<div mat-dialog-content *ngIf="data.dialogId === 'user'">
   <mat-divider></mat-divider>
   <mat-list>
     <mat-list-item>
